--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
 
   "permissions": [
     "contextMenus",
-  "http://*/"
+    "tabs",
+    "http://*/"
   ],
   "background": {
     "scripts": ["provenance.js"]
